--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .background-image-all {
-    background-image: url('/images/background.jpg');
+    background-image: url("../images/background.jpg');
     background-size: cover;
     height: 1000px;
     /* Adjust the size of the background image */
