--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+.navbar{
+    z-index: 2;
+}
 .background-image-all {
     background-image: url("../images/background.jpg");
     background-size: cover;
-    height: 1000px;
+    height: 100%;
     /* Adjust the size of the background image */
     background-repeat: no-repeat;
     /* Prevent the background image from repeating */
@@ -153,3 +156,169 @@
     background-color: rgb(130, 119, 91); /* Replace with your desired background color */
     color: white; /* Set text color to white for contrast */
 }
+
+ .footer-p {
+            background-color: rgb(130, 119, 91);
+            color: #fff;
+            padding: 20px;
+            height: 100%;
+            text-align: center;
+            /* background-image: url('footer-image.jpg'); */
+            background-size: cover; /* Optional: Adjust the background image size */
+        }
+
+
+ .footer-a {
+    background-color: rgb(255, 239, 198);
+    color: #fff;
+    padding: 20px;
+    height: 100px;
+    text-align: center;
+    background-image: url('footer-image.jpg');
+    background-size: cover; /* Optional: Adjust the background image size */
+}
+.a-link{
+    text-decoration: none;
+
+}
+.poppins-font{
+    font-family: 'Poppins', sans-serif;
+}
+
+
+.row > .column {
+    padding: 0 8px;
+    --bs-gutter-x: 1.5rem;
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  .column {
+    float: left;
+    width: 25%;
+    cursor: pointer;
+  }
+  
+  /* The Modal (background) */
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 20;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: black;
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    width: 90%;
+    max-width: 1200px;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: lighter;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .mySlides {
+    display: none;
+  }
+  
+  .cursor {
+    cursor: pointer;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  img {
+    margin-bottom: -4px;
+  }
+  
+  .caption-container {
+    text-align: center;
+    background-color: black;
+    padding: 2px 16px;
+    color: white;
+  }
+  
+  .demo {
+    opacity: 0.6;
+  }
+  
+  .active,
+  .demo:hover {
+    opacity: 1;
+  }
+  
+  img.hover-shadow {
+    transition: 0.3s;
+  }
+  
+  .hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
+  .content-hp{
+    height: max-content;
+  }
